Adds in comments, Smarter edit Smarter add

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#83d517</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#288fea</color>
+    <color name="colorWhite">#fff</color>
 </resources>
