--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,35 +21,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/categoryText"
-        android:layout_width="357dp"
-        android:layout_height="94dp"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal"
-        android:text="1.Select whichever foods provoke your appetite. \n2.Hit choose. \n3.The burden out of food selection is gone!"
-        android:textAlignment="center"
-        android:textColor="#288fea"
-        android:textSize="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.148" />
+
+
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.475"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:layout_constraintVertical_bias="0.475" />-->
 
     <HorizontalScrollView
         android:id="@+id/scrollBar"
         android:layout_width="363dp"
         android:layout_height="91dp"
         android:colorEdgeEffect="#ff5050"
+        android:fadeScrollbars="false"
         android:fillViewport="true"
+        android:scrollbarAlwaysDrawHorizontalTrack="true"
         app:layout_constraintBottom_toTopOf="@+id/choiceButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.466"
+        app:layout_constraintHorizontal_bias="0.52"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/categoryText"
-        app:layout_constraintVertical_bias="0.548">
-
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.796">
         <LinearLayout
             android:id="@+id/linear"
             android:layout_width="wrap_content"
@@ -113,17 +107,18 @@
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.913"
+        app:layout_constraintHorizontal_bias="0.788"
         app:layout_constraintStart_toEndOf="@+id/choiceButton"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.571"
+        app:layout_constraintVertical_bias="0.323"
         app:srcCompat="@drawable/addmore" />
 
     <Button
         android:id="@+id/choiceButton"
         android:layout_width="100dp"
         android:layout_height="46dp"
-        android:background="#83d517"
+        android:background="@drawable/round_button_green"
+
         android:shadowColor="#ffff"
         android:text="Choose"
         android:textColor="#ffff"
@@ -132,25 +127,56 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.573" />
+        app:layout_constraintVertical_bias="0.324" />
 
-    <TextView
-        android:id="@+id/choiceTextView"
-        android:layout_width="176dp"
-        android:layout_height="36dp"
-        android:text="Nothing selected"
-        android:textAlignment="center"
-        android:textColor="#288fea"
-        android:textSize="16dp"
-        android:gravity="center_horizontal"
-        android:layout_gravity="center_horizontal"
+    <ImageView
+        android:id="@+id/choiceImageView"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/choiceButton"
-        app:layout_constraintVertical_bias="0.117" />
 
+        app:layout_constraintTop_toBottomOf="@+id/choiceButton"
+        app:layout_constraintVertical_bias="0.193">
+        android:id="@+id/"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"></ImageView>
+
+    <Button
+        android:id="@+id/searchOnWeb"
+        android:layout_width="199dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="57dp"
+        android:background="@drawable/round_button_blue"
+        android:shadowColor="#ffff"
+        android:text="Websearch for "
+        android:textColor="#ffff"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/choiceTextView"
+        app:layout_constraintVertical_bias="0.166" />
+
+    <TextView
+        android:id="@+id/choiceTextView"
+        android:layout_width="209dp"
+        android:layout_height="37dp"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="#288fea"
+        android:textSize="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/choiceButton"
+        app:layout_constraintVertical_bias="0.741" />
 
     <TextView
         android:id="@+id/textView"
