--- a/app/src/main/res/layout/add_meal_custom_dialogue.xml
+++ b/app/src/main/res/layout/add_meal_custom_dialogue.xml
@@ -4,11 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorAccent"
     android:id="@+id/layoutlinear" >
 <LinearLayout
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+>
 
     <ImageView
         android:id="@+id/dialogueMealPicture"
@@ -18,6 +20,7 @@
         android:layout_marginTop="16dp"/>
     <EditText
         android:id="@+id/dialogueMealName"
+        android:textColor="@color/colorWhite"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -28,6 +31,7 @@
 
     <EditText
         android:id="@+id/dialogueMealDescription"
+        android:textColor="@color/colorWhite"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginLeft="4dp"
@@ -39,6 +43,7 @@
 
     <EditText
         android:id="@+id/dialogueMealRecipe"
+        android:textColor="@color/colorWhite"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_marginLeft="4dp"
