--- a/app/src/main/res/layout/edit_meal_custom_dialogue.xml
+++ b/app/src/main/res/layout/edit_meal_custom_dialogue.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorAccent">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -14,6 +16,7 @@
         android:layout_marginTop="16dp" />
     <EditText
         android:id="@+id/dialogueMealName"
+        android:textColor="@color/colorWhite"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -25,6 +28,7 @@
 
     <EditText
         android:id="@+id/dialogueMealDescription"
+        android:textColor="@color/colorWhite"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_marginLeft="4dp"
@@ -43,6 +47,7 @@
         android:layout_marginRight="4dp"
         android:layout_marginBottom="16dp"
         android:fontFamily="sans-serif"
+        android:textColor="@color/colorWhite"
         android:hint="Recipe" />
     </LinearLayout>
 </ScrollView>
